Fix grid bug on small breakpoint

--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -9,7 +9,7 @@
 // To avoid conflicts, Wire used custom namespace,
 // Set 'wire-' to avoid conflicts with others frameworks. '' by default.
 // ----------------------
-$wire-namespace:     '' !default;
+$wire-namespace: '' !default;
 
 // ----------------------
 // Markup Mode
@@ -18,7 +18,7 @@ $wire-namespace:     '' !default;
 // the styles in Sass, set this in 'false'.
 // Set 'true' or 'false'. True by default.
 // ----------------------
-$wire-markup:        true !default;
+$wire-markup: true !default;
 
 // ----------------------
 // Debug Mode
@@ -26,7 +26,7 @@ $wire-markup:        true !default;
 // Highlight markup errors.
 // Set 'true' or 'false'. False by default.
 // ----------------------
-$wire-debug:         false !default;
+$wire-debug: false !default;
 
 
 
@@ -40,7 +40,6 @@ $wire-debug:         false !default;
 // ----------------------
 $wire-font-size-base: 16 !default;
 $wire-line-height-base: 1.45 !default;
-
 $wire-border-radius: 3px !default;
 
 // ----------------------
@@ -49,24 +48,19 @@ $wire-border-radius: 3px !default;
 // ----------------------
 // Brand Colors
 // ----------------------
-$wire-color-primary: #48A8CE !default;
-$wire-color-secundary: #7C7C7C !default;
-$wire-color-alt: #E0E0E0 !default;
-
+$wire-color-primary: #48a8ce !default;
+$wire-color-secundary: #7c7c7c !default;
+$wire-color-alt: #e0e0e0 !default;
 $wire-link-color: $wire-color-primary !default;
 $wire-link-color-hover: darken($wire-color-primary, 30%) !default;
-
 $wire-button-bg: $wire-color-primary !default;
-$wire-button-color: #FFF !default;
-
+$wire-button-color: #ffffff !default;
 $wire-button-alt-bg: $wire-color-alt !default;
 $wire-button-alt-color: $wire-color-secundary !default;
-
-$wire-form-input-border: #E0E0E0 !default;
-$wire-form-input-bg: #FFF !default;
-
-$wire-table-tr-even-bg: #E5E5E5 !default;
-$wire-table-border-color: #D2D2D2 !default;
+$wire-form-input-border: #e0e0e0 !default;
+$wire-form-input-bg: #ffffff !default;
+$wire-table-tr-even-bg: #e5e5e5 !default;
+$wire-table-border-color: #d2d2d2 !default;
 
 // ----------------------
 // Grid
